Get MapState mostly working
Arrow keys aren't working, yet.

--- a/web/infinite_mario_bros.html
+++ b/web/infinite_mario_bros.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Infinite Mario Bros</title>
-    <link rel="stylesheet" href="infinite_mario_bros.css">
+    <!--<link rel="stylesheet" href="infinite_mario_bros.css">-->
   </head>
   <body>
     <h1>Infinite mario bros</h1>
